[package]
name = "image-effects"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.79"
base64 = "0.13.0"
image = "0.23.14"

[dependencies.web-sys]
version = "0.3.56"
features = ["console"]